# ily

./: Makefile  README.md  input.txt  output.txt  rpn  shapes.cpp  test
.github/workflows/: ci.yml
fixA/: config.cpp  config.hpp
fixB/: main.cpp
heap_hw/: CMakeLists.txt  heap.h  main.cpp
heap_hw/tests/: tests.cpp
practice1_14_03_2026/: answers.txt
practice1_14_03_2026/fixB/: config.hpp
practice2/: calc  calc.cpp  main.cpp
sparse_vector_hw/: SparseVector.cpp  SparseVector.h  SparseVectorTest.cpp  main.cpp  sparse  tests
splay_tree/: main.cpp
splay_tree/include/: SplayTree.hpp
splay_tree/src/: SplayTree.cpp
src/: rpn.cpp
